--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ serde = { version = "1.0", features = ["derive"] }
 csv = "1.1.6"
 thiserror = "1.0.31"
 rand = "0.8.5"
+
+[dev-dependencies]
+assert_cmd = "2.0"
+predicates = "2.1"
+assert_fs = "1.0"
