--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 csv = "1.1.6"
 thiserror = "1.0.31"
-rand = "0.8.5"
+rust_decimal = "1.10.1"
+rust_decimal_macros = "1.10.1"
 
 [dev-dependencies]
 assert_cmd = "2.0"
 predicates = "2.1"
 assert_fs = "1.0"
+rand = "0.8.5"
